# ZenRen

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  G3D11App.sln  README.md  ZenRen.sln  launch.vs.json
G3D11App/: D3D11Renderer.cpp  D3D11Renderer.h  G3D11App.cpp  G3D11App.h  G3D11App.rc  G3D11App.vcxproj  G3D11App.vcxproj.filters  ReadMe.txt  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Util.cpp  Util.h  resource.h  stdafx.cpp  stdafx.h
G3D11App/Shaders/: flatBasicColorTexShader.hlsl  shaders.hlsl  testTriangle.hlsl  toneMapping.hlsl
G3D11App/src/: InitApp.cpp  Util.cpp  Util.h
G3D11App/src/game/: Actions.cpp  GameArgs.h  GameLoop.cpp  GameLoop.h  Input.cpp  Input.h  PerfStats.cpp  PerfStats.h  TimerPrecision.cpp  TimerPrecision.h
G3D11App/src/imgui/: imgui_custom.cpp  imgui_custom.h
G3D11App/src/renderer/: Camera.cpp  Camera.h  D3D11Renderer.cpp  D3D11Renderer.h  Gui.cpp  Gui.h  PipelineForward.cpp  PipelineForward.h  PipelinePostProcess.cpp  PipelinePostProcess.h  PipelineWorld.cpp  PipelineWorld.h  RenderSettings.cpp  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  RendererCommon.cpp  RendererCommon.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TextureLoader.cpp  dx11.h
G3D11App/src/renderer/loader/: AssetFinder.cpp  AssetFinder.h  MeshFromVdfLoader.cpp  MeshFromVdfLoader.h  ObjLoader.cpp  ObjLoader.h  TextureFinder.cpp  TextureFinder.h  TextureLoader.cpp  TextureLoader.h  ZenLoader.cpp  ZenLoader.h
ZenRen/: ZenRen.rc  ZenRen.vcxproj  ZenRen.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
ZenRen/Shaders/: flatBasicColorTexShader.hlsl  mainPass.hlsl  mainPassTexOnly.hlsl  renderToTexture.hlsl  sky.hlsl  testTriangle.hlsl  toneMapping.hlsl  wireframe.hlsl
ZenRen/lib/imgui/: imgui_impl_dx11.cpp
ZenRen/lib/octree_attcs/: octree.h
ZenRen/src/: InitApp.cpp  Settings.h  Util.cpp  Util.h
ZenRen/src/assets/: AssetCache.cpp  AssetCache.h  AssetFinder.cpp  AssetFinder.h  DebugMeshes.cpp  DebugMeshes.h  FindGroundFace.cpp  FindGroundFace.h  LookupTrees.cpp  LookupTrees.h  MeshFromVdfLoader.cpp  MeshFromVdfLoader.h  ObjLoader.cpp  ObjLoader.h  StaticLightFromVobLights.cpp  StaticLightFromVobLights.h  ZenLoader.cpp  ZenLoader.h
ZenRen/src/game/: Actions.cpp  Actions.h  GameArgs.cpp  GameArgs.h  GameLoop.cpp  GameLoop.h  Input.cpp  Input.h  PerfStats.cpp  PerfStats.h  TimerPrecision.h
ZenRen/src/imgui/: imgui_custom.cpp  imgui_custom.h
ZenRen/src/render/: Camera.cpp  Camera.h  Common.cpp  Common.h  Gui.cpp  Gui.h  MeshUtil.cpp  MeshUtil.h  PerfStats.cpp  Primitives.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  SettingsGui.cpp  SettingsGui.h  ShaderManager.cpp  ShaderManager.h  Sky.cpp  Sky.h  Texture.cpp  Texture.h  dx11.h
ZenRen/src/render/pass/: PassForward.cpp  PassPost.cpp  PassSky.cpp  PassWorld.cpp  PassWorld.h  PassWorldLoader.cpp  PassWorldLoader.h
ZenRen/src/renderer/: Camera.cpp  Camera.h  Gui.cpp  Gui.h  PipelineForward.cpp  PipelineForward.h  PipelinePostProcess.cpp  PipelinePostProcess.h  PipelineSky.cpp  PipelineSky.h  PipelineWorld.cpp  PipelineWorld.h  RenderSettings.cpp  RenderSettings.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  RendererCommon.cpp  RendererCommon.h  Settings.cpp  Settings.h  SettingsGui.cpp  SettingsGui.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sky.cpp  Sky.h  Texture.cpp  Texture.h
ZenRen/src/renderer/loader/: AssetFinder.cpp  DebugMeshes.cpp  DebugMeshes.h  DebugTextures.cpp  (+23 more)
ZenRen/src/viewer/: Actions.cpp  Actions.h  Args.cpp  Args.h  GameLoop.cpp  InitApp.cpp  Input.cpp  Input.h  PerfStats.cpp  PerfStats.h  TimerPrecision.cpp
resources/shaders/: colorSpaceConversion.hlsl  depthPrepass.hlsl  mainPass.hlsl  toneMapping.hlsl
resources/shaders/forward/: common.hlsl  main.hlsl  mainTexColorOnly.hlsl  sky.hlsl  world.hlsl  worldCommon.hlsl  worldDebug.hlsl  worldDiffuseOnly.hlsl  worldVertexInput.hlsl
src/: Logger.cpp  Logger.h  Util.cpp  Util.h  Win.cpp  Win.h  stdafx.h
src/assets/: AssetCache.cpp  AssetCache.h  AssetFinder.cpp  AssetFinder.h  DebugMeshes.cpp  DebugMeshes.h  DebugTextures.cpp  DebugTextures.h  FindGroundFace.cpp  FindGroundFace.h  LookupTrees.cpp  LookupTrees.h  MeshFromVdfLoader.cpp  MeshFromVdfLoader.h  MeshLoader.cpp  MeshLoader.h  MeshOpt.h  ObjLoader.cpp  StaticLightFromVobLights.cpp  StaticLightFromVobLights.h  TexFromVdfLoader.cpp  TexFromVdfLoader.h  TexLoader.cpp  TexLoader.h  VobLoader.cpp  VobLoader.h  ZenKitLoader.cpp  ZenKitLoader.h  ZenLoader.cpp  ZenLoader.h
src/imgui/: imgui_custom.cpp  imgui_custom.h
src/render/: Camera.cpp  Camera.h  Common.cpp  Common.h  Dx.h  Graphics.h  Grid.cpp  Grid.h  Gui.cpp  Gui.h  GuiHelper.h  Loader.cpp  Loader.h  MeshPrimitives.cpp  MeshPrimitives.h  MeshUtil.cpp  MeshUtil.h  PerfStats.cpp  PerfStats.h  Primitives.cpp  Primitives.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  Settings.h  SettingsGui.cpp  SettingsGui.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Sky.cpp  Sky.h  Texture.cpp  Texture.h  VertexPacker.h  WinDx.cpp  WinDx.h  dx11.h
src/render/basic/: Common.cpp  Common.h  Graphics.h  Grid.cpp  Grid.h  MeshPrimitives.cpp  MeshPrimitives.h  MeshUtil.cpp  MeshUtil.h  Primitives.cpp  Primitives.h  VertexAttributes.h  VertexPacker.cpp  VertexPacker.h
src/render/d3d/: BlendState.cpp  BlendState.h  Buffer.h  ConstantBuffer.cpp  ConstantBuffer.h  GeometryBuffer.cpp  GeometryBuffer.h  Other.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  StructuredBuffer.cpp  StructuredBuffer.h  TextureBuffer.cpp  TextureBuffer.h  TextureBufferFormat.cpp
src/render/pass/: PassForward.cpp  PassForward.h  PassPost.cpp  PassPost.h  PassSky.cpp  PassSky.h  PassWorld.cpp  PassWorld.h  PassWorldChunkGrid.cpp  PassWorldChunkGrid.h  PassWorldLoader.cpp  PassWorldLoader.h
src/viewer/: Actions.cpp  Args.h  GameLoop.cpp  GameLoop.h  InitApp.cpp  Input.cpp  Input.h  TimerPrecision.h
src/viewer/win_resources/: ZenRen.rc  app.manifest  resource.h
(+9 files in other folders)
